# OcfEngine2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  main.yml
assets/fonts/: NatoSansJP.fnt
assets/shaders/: basic.vert  drawNode.frag  drawNode.vert  label.frag  label.vert  phong.frag  phong.vert  position.vert  positionTexture.frag  positionTexture.vert  sample.frag  sample.vert  skybox.frag  skybox.vert
docs/: README.md  handle-system.md  handle-usage.md  memory-allocation.md
engine/: CMakeLists.txt
engine/include/ocf/2d/: DrawNode.h  Font.h  FontAtlas.h  FontFNT.h  FontManager.h  Label.h  Node2D.h  Sprite.h
engine/include/ocf/3d/: FirstPersonCamera.h  Mesh.h  MeshInstance3D.h  MeshUsageExample.h  ModelLoader.h  Node3D.h  ObjModelLoader.h
engine/include/ocf/audio/: AudioEngine.h
engine/include/ocf/base/: Camera.h  CanvasItem.h  Engine.h  Macros.h  Node.h  Object.h  Reference.h  Scene.h  Types.h  View.h
engine/include/ocf/core/: Allocator.h  Event.h  EventDispatcher.h  EventKeyboard.h  EventListener.h  EventListenerKeyboard.h  EventListenerMouse.h  EventMouse.h  Logger.h  StringUtils.h  Variant.h
engine/include/ocf/core/job/: Job.h  JobSystem.h  WorkStealingQueue.h  Worker.h
engine/include/ocf/input/: Input.h  Keyboard.h  Mouse.h
engine/include/ocf/math/: geometric.h  geometric.inl  mat2.h  mat2.inl  mat3.h  mat3.inl  mat4.h  mat4.inl  matrix_transform.h  matrix_transform.inl  noise.h  noise.inl  qualifie.h  quat.h  quat.inl  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
engine/include/ocf/platform/: Application.h  ApplicationBase.h  PlatformConfig.h  RenderView.h  RenderViewImpl.h
engine/include/ocf/platform/linux/: Application-linux.cpp
engine/include/ocf/platform/windows/: Application-windows.h
engine/include/ocf/renderer/: CustomCommand.h  IndexBuffer.h  Material.h  MeshCommand.h  Program.h  ProgramManager.h  QuadCommand.h  RenderCommand.h  RenderPrimitive.h  Renderer.h  Texture.h  TextureManager.h  TrianglesCommand.h  VertexBuffer.h
engine/include/ocf/renderer/backend/: Driver.h  DriverEnums.h  Handle.h  PipelineState.h
engine/include/ocf/ui/: UIButton.h  UIButtonBase.h  UIWidget.h
engine/src/2d/: CMakeLists.txt  DrawNode.cpp  Font.cpp  FontAtlas.cpp  FontFNT.cpp  FontManager.cpp  Label.cpp  Node2D.cpp  Sprite.cpp
engine/src/3d/: CMakeLists.txt  FirstPersonCamera.cpp  Mesh.cpp  MeshInstance3D.cpp  Node3D.cpp  ObjModelLoader.cpp
engine/src/audio/: AudioCache.cpp  AudioCache.h  AudioDecoder.cpp  AudioDecoder.h  AudioDecoderManager.cpp  AudioDecoderManager.h  AudioDecoderWav.cpp  AudioDecoderWav.h  AudioEngine.cpp  AudioEngineImpl.cpp  AudioEngineImpl.h  AudioMacros.h  AudioPlayer.cpp  AudioPlayer.h
engine/src/base/: CMakeLists.txt  Camera.cpp  CanvasItem.cpp  Engine.cpp  Node.cpp  Object.cpp  Reference.cpp  Scene.cpp  Types.cpp  View.cpp
engine/src/core/: Allocator.cpp  CMakeLists.txt  Event.cpp  EventDispatcher.cpp  EventKeyboard.cpp  EventListener.cpp  EventListenerKeyboard.cpp  EventListenerMouse.cpp  EventMouse.cpp  FileUtils.cpp  StringUtils.cpp
engine/src/core/job/: JobSystem.cpp  Worker.cpp
engine/src/input/: CMakeLists.txt  Input.cpp  Keyboard.cpp  Mouse.cpp
engine/src/math/: CMakeLists.txt  MaxRectsBinPack.cpp
engine/src/platform/: Application.cpp  ApplicationBase.cpp  CMakeLists.txt  PlatformMacros.h  RenderView.cpp  RenderViewImpl.cpp
engine/src/platform/linux/: Application-linux.cpp  Application-linux.h
engine/src/platform/windows/: Application-windows.cpp
engine/src/renderer/: CMakeLists.txt  CustomCommand.cpp  IndexBuffer.cpp  Material.cpp  MeshCommand.cpp  Program.cpp  ProgramManager.cpp  QuadCommand.cpp  RenderCommand.cpp  RenderPrimitive.cpp  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Texture.cpp  TextureManager.cpp  TrianglesCommand.cpp  VertexBuffer.cpp
engine/src/renderer/backend/: CMakeLists.txt  Driver.cpp  Driver.h  DriverBase.h  DriverEnums.h  HandleAllocator.cpp  HandleAllocator.h
engine/src/renderer/backend/opengl/: OpenGLContext.cpp  OpenGLContext.h  OpenGLDriver.cpp  OpenGLDriver.h  OpenGLUtility.cpp  OpenGLUtility.h
engine/src/ui/: UIButton.cpp  UIButtonBase.cpp  UIWidget.cpp
engine/test/: CMakeLists.txt  test_allocator.cpp  test_buffer_descripter.cpp  test_jobsystem.cpp  test_mat4.cpp  test_material.cpp  test_matrix_transform.cpp  test_mesh.cpp  test_node.cpp  test_noise.cpp  test_quat.cpp  test_reference.cpp
samples/: CMakeLists.txt
samples/chess/: AppDelegate.cpp  CMakeLists.txt  Chess.cpp  Chess.h  MainScene.cpp  MainScene.h  Texture.cpp  Texture.h  main.cpp
tests/cpp-tests/: AppDelegate.cpp  AppDelegate.h  CMakeLists.txt  MainScene.cpp  MainScene.h
tests/cpp-tests/AudioEngineTest/: AudioEngineTest.cpp  AudioEngineTest.h
tests/cpp-tests/MeshInstance3DTest/: MeshInstance3DTest.cpp  MeshInstance3DTest.h
tests/cpp-tests/chess/: ChessScene.cpp  ChessScene.h
tools/: convert.py
